fix: accent background visible behind avatar

--- a/app/style/components/participant-avatar.less
+++ b/app/style/components/participant-avatar.less
@@ -59,7 +59,6 @@ participant-avatar {
 
   .participant-avatar {
     height: 100%;
-    background-color: currentColor;
     & > div {
       position: absolute;
       top: 0;
@@ -169,6 +168,11 @@ participant-avatar {
     .text-center;
     user-select: none;
     color: #fff;
+  }
+
+  .avatar-background {
+    background-color: currentColor;
+    transform: scale(0.9916);
   }
 
   .avatar-image {
